# Path-Manager

./: .gitignore  Application.manifest  CMakeLists.txt  Makefile  PathManager.cbp  PathManager.depend  PathManager.layout  PathManager.mk  PathManager.project  PathManager.sln  PathManager.txt  PathManager.vcxproj  PathManager.vcxproj.filters  PathManager.workspace  README.md  actions.cpp  actions.h  dialogs.cpp  dialogs.h  main.cpp  main.h  resource.h  resource.rc  util.cpp  util.h
PathManagerTest/: PathManagerTest.mk  PathManagerTest.project  PathManagerTest.txt  documentTest.cpp
PathManagerTest/Debug/: documentTest.cpp.o.d  main.cpp.o.d
UnitTest/: UnitTest.vcxproj  unittest1.cpp
include/: actions.h  dialogs.h  document.h  main.h  resource.h  stdafx.h  util.h
res/: resource.aps  resource.rc
src/: actions.cpp  dialogs.cpp  document.cpp  main.cpp  stdafx.cpp  util.cpp
